# tg-bot

./: .env  .gitignore  README.md  implementation_plan.md  pyproject.toml  tender_bot.db
src/tender_bot/: __init__.py  __main__.py  config.py  db.py  filters.py  models.py
src/tender_bot/bot/: __init__.py  handlers.py  keyboards.py
src/tender_bot/scrapers/: __init__.py  base.py  goszakupki.py  icetrade.py  scheduler.py
storage/key_value_stores/default/: __CRAWLER_STATISTICS_0  __CRAWLER_STATISTICS_1  __CRAWLER_STATISTICS_1.__metadata__.json  __CRAWLER_STATISTICS_10  __CRAWLER_STATISTICS_11  __CRAWLER_STATISTICS_11.__metadata__.json  __CRAWLER_STATISTICS_12  __CRAWLER_STATISTICS_13  __CRAWLER_STATISTICS_14  __CRAWLER_STATISTICS_15  __CRAWLER_STATISTICS_15.__metadata__.json  __CRAWLER_STATISTICS_16  __CRAWLER_STATISTICS_16.__metadata__.json  __CRAWLER_STATISTICS_17  __CRAWLER_STATISTICS_17.__metadata__.json  __CRAWLER_STATISTICS_18  __CRAWLER_STATISTICS_18.__metadata__.json  __CRAWLER_STATISTICS_19  __CRAWLER_STATISTICS_19.__metadata__.json  __CRAWLER_STATISTICS_2  __CRAWLER_STATISTICS_2.__metadata__.json  __CRAWLER_STATISTICS_3  __CRAWLER_STATISTICS_3.__metadata__.json  __CRAWLER_STATISTICS_4  __CRAWLER_STATISTICS_4.__metadata__.json  __CRAWLER_STATISTICS_5  __CRAWLER_STATISTICS_5.__metadata__.json  __CRAWLER_STATISTICS_6  __CRAWLER_STATISTICS_6.__metadata__.json  __CRAWLER_STATISTICS_7  __CRAWLER_STATISTICS_7.__metadata__.json  __CRAWLER_STATISTICS_8  __CRAWLER_STATISTICS_8.__metadata__.json  __CRAWLER_STATISTICS_9  __CRAWLER_STATISTICS_9.__metadata__.json  (+5 more)
(+11 files in other folders)
