[project]
name = "tender-bot"
version = "0.1.0"
description = "Telegram bot for monitoring Belarusian government tenders related to geodesy"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.28.2",
    "aiosqlite>=0.22.1",
    "apscheduler>=3.11.2",
    "cloakbrowser>=0.3.31",
    "crawlee[playwright]>=1.7.1",
    "hatchling>=1.29.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "aiohttp-socks>=0.8.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tender_bot"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.basedpyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = [
    "basedpyright>=1.39.6",
    "ruff>=0.15.15",
]
